<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/textview"
            android:paddingTop="20dp"
            android:text="@string/reserve_purpose"
            android:textColor="#184C88"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/temppurpose"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/purpose_textview"
            android:hint="예약 목적 뜨는 칸"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/textview"
            android:paddingTop="20dp"
            android:text="@string/reserve_date"
            android:textColor="#184C88"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tempdate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/purpose_textview"
            android:hint="예약 날짜 뜨는 칸"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/textview"
            android:paddingTop="20dp"
            android:text="@string/reserve_purpose"
            android:textColor="#184C88"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/temptime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/purpose_textview"
            android:hint="예약 시간 뜨는 칸"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/textview"
            android:paddingTop="20dp"
            android:text="@string/reserve_people"
            android:textColor="#184C88"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tempnum"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/purpose_textview"
            android:hint="예약 인원 뜨는 칸"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/accept"
                android:textColor="#184C88"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#184C88"
                android:text="@string/reject"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>